2010-03-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Push `#if large_memory' for `editstring' out of header.

	* rcsedit.c (UNUSED_IF_LARGE_MEMORY): New #define.
	(editstring): Use `UNUSED_IF_LARGE_MEMORY' for param `delta';
	remove preproc conditional surrounding func header.
	* rcsbase.h (editstring): Remove surrounding preproc
	conditional, including sibling block `#if large_memory'.

2010-03-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Add braces to disambiguate `else' clause.

	* rcsedit.c [!large_memory] (copylines):
	Add braces to disambiguate `else' clause.

2010-03-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Define type for `pairnames' "rcsopen" func.

	* rcsbase.h (open_rcsfile_fn_t): New typedef.
	(pairnames): Use `open_rcsfile_fn_t' in func decl.
	* rcsfnms.c (pairnames): Use `open_rcsfile_fn_t' in arglist.

2010-03-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int C] Dose data structures with `const'.

	* rcsbase.h (ciklog, Keyword, ctab, expand_names, Kaccess)
	(Kauthor, Kbranch, Kcomment, Kdate, Kdesc, Kexpand, Khead)
	(Klocks, Klog, Knext, Kstate, Kstrict, Ksymbols, Ktext)
	(equal_line): Add `const' to var decls.
	* rcsedit.c (ciklog): Add `const' to var definition.
	* rcskeys.c (Keyword): Likewise.
	* rcsmap.c (ctab): Likewise.
	* rcssyn.c (Kaccess, Kauthor, Kbranch, Kcomment, Kdate)
	(Kdesc, Kexpand, Khead, Klocks, Klog, Knext, Kstate)
	(Kstrict, Ksymbols, Ktext, expand_names): Likewise.
	* rcsutil.c (equal_line): Likewise.

2010-03-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Consolidate parse state into `struct parse_state'.

	Here, "U" means "Throughout, use `LEX (foo)' and `NEXT (foo)'
        instead of the old singular variable names".
	* rcsbase.h (parse_state): New struct.
	(parse_state): New `struct parse_state' decl.
	(LEX, NEXT): New macros.
	(NextString, nexttok, nerror, nextc, rcsline): Delete var decls.
	* rcslex.c: U.
	(parse_state): New `struct parse_state'.